--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,17 @@ dist.jar=${dist.dir}/Dictionary.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.language-ro-2.8.jar=resources/language-ro-2.8.jar
+file.reference.languagetool-core-2.8.jar=resources/languagetool-core-2.8.jar
+file.reference.morfologik-fsa-1.10.0.jar=resources/morfologik-fsa-1.10.0.jar
+file.reference.morfologik-stemming-1.10.0.jar=resources/morfologik-stemming-1.10.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.language-ro-2.8.jar}:\
+    ${file.reference.languagetool-core-2.8.jar}:\
+    ${file.reference.morfologik-fsa-1.10.0.jar}:\
+    ${file.reference.morfologik-stemming-1.10.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
