Computing opinions basics from sentences
Implemented normalizations and lemmatizations of the sentences, in order
to create opinions.

--- a/OpinionTool/nbproject/project.properties
+++ b/OpinionTool/nbproject/project.properties
@@ -27,9 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/OpinionTool.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.language-ro-2.8.jar=resources\\language-ro-2.8.jar
+file.reference.languagetool-core-2.8.jar=resources\\languagetool-core-2.8.jar
+file.reference.morfologik-fsa-1.10.0.jar=resources\\morfologik-fsa-1.10.0.jar
+file.reference.morfologik-stemming-1.10.0.jar=resources\\morfologik-stemming-1.10.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.language-ro-2.8.jar}:\
+    ${file.reference.languagetool-core-2.8.jar}:\
+    ${file.reference.morfologik-fsa-1.10.0.jar}:\
+    ${file.reference.morfologik-stemming-1.10.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
